--- a/src/index.html
+++ b/src/index.html
@@ -2,254 +2,165 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Check out these beautiful locations around the world"
-    />
-    <meta name="keywords" content="travel, destinations, locations" />
-    <meta name="author" content="Carlos Chavez" />
-    <title>Around the US</title>
-
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta content="width-device-width, initial-scale=1.0" name="viewport" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <title>Around the U.S.</title>
   </head>
-  <body>
-    <!-- PROFILE MODAL -->
-
-    <div class="modal" id="editProfile-modal">
-      <div class="modal__container">
-        <button
-          type="button"
-          class="modal__close"
-          aria-label="Close edit profile"
-        ></button>
-        <p class="modal__header">Edit profile</p>
-        <form id="profile-edit-form" class="modal__form">
-          <input
-            class="modal__input modal__input-name"
-            id="profile-name"
-            type="text"
-            placeholder="Name"
-            name="name"
-            minlength="2"
-            maxlength="40"
-            required
-          />
-          <span class="modal__error" id="profile-name-error"></span>
-
-          <input
-            class="modal__input modal__input-profession"
-            id="profile-profession"
-            type="text"
-            placeholder="Profession"
-            name="profession"
-            minlength="2"
-            maxlength="200"
-            required
-          />
-          <span class="modal__error" id="profile-profession-error"></span>
-
-          <button class="modal__button">Save</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- DESTINATION MODAL-->
-
-    <div class="modal" id="newCard-modal">
-      <div class="modal__container">
-        <button
-          type="button"
-          class="modal__close"
-          id="newCard-modal-close"
-          aria-label="Close add form"
-        ></button>
-        <p class="modal__header">New place</p>
-        <form id="profile-add-form" class="modal__form">
-          <input
-            class="modal__input modal__input-title"
-            id="destination-name"
-            type="text"
-            name="title"
-            placeholder="Destination name"
-            minlength="1"
-            maxlength="30"
-            required
-          />
-          <span class="modal__error" id="destination-name-error"></span>
-          <input
-            class="modal__input modal__input-image"
-            id="destination-url"
-            type="url"
-            name="link"
-            placeholder="Image link"
-            required
-          />
-          <span class="modal__error" id="destination-url-error"></span>
-          <button type="submit" class="modal__button">Create</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- DISPLAY MODAL -->
-
-    <div class="modal" id="viewImage-modal">
-      <div class="modal__image-container">
-        <button
-          type="button"
-          class="modal__close"
-          id="viewImage-modal-close"
-          aria-label="Close image display"
-        ></button>
-        <img src="#" class="modal__image-display" id="modal-image" alt="" />
-
-        <h3 class="modal__image-title"></h3>
-      </div>
-    </div>
-
-    <!-- CONFIRM DELETE MODAL 430x 181-->
-
-    <div class="modal" id="deleteCard-modal">
-      <div class="modal__container modal__container-confirm">
-        <button
-          type="button"
-          class="modal__close"
-          aria-label="Close edit profile"
-        ></button>
-        <p class="modal__header modal__header-confirm">Are you sure?</p>
-        <form id="deleteCard-button" class="modal__form">
-          <button class="modal__button modal__button-confirm" type="submit">Yes</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- PROFILE IMAGE MODAL-->
-
-    <div class="modal" id="editAvatar-modal">
-      <div class="modal__container-avatar">
-        <button
-          type="button"
-          class="modal__close"
-          id="editAvatar-modal-close"
-          aria-label="Close add form"
-        ></button>
-        <p class="modal__header">Change profile picture</p>
-        <form id="avatar-update-form" class="modal__form">
-          <input
-            class="modal__input modal__input-imageUrl"
-            id="avatar-url"
-            type="url"
-            name="avatar"
-            placeholder="Image link"
-            required
-          />
-          <span class="modal__error" id="avatar-url-error"></span>
-          <button type="submit" class="modal__button">Create</button>
-        </form>
-      </div>
-    </div>
-
-    <!-- PAGE START -->
-
-    <div class="page">
-      <header class="header">
+  <body class="page">
+    <div class="page__content">
+      <header class="header page__section">
         <img
-          src="<%=require('./images/around_logo.svg')%>"
-          alt="Around the U.S."
           class="header__logo"
+          src="<%=require('./images/Logo.svg')%>"
+          alt="Around the U.S. Logo"
         />
       </header>
-
-      <main class="main">
-        <section class="profile">
-          <figure class="profile__image-frame">
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            src="<%=require('./images/jacques-cousteau.jpg')%>"
+            alt="Avatar"
+            class="profile__image"
+          />
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button
+              class="profile__edit-button"
+              id="profile-edit-button"
               type="button"
-              class="profile__image-edit"
-              aria-label="Edit pavatar"
-            >
-              <img
-              
-                src=""
-                class="profile__image"
-                alt="picture of Jacques Cousteau"
-              />
-              
-              <img
-                  src="<%=require('./images/edit_button.svg')%>" class="profile__image-overlay"
-                  alt="edit button, pencil in a square"
-                />
-            </button>
-          </figure>
-
-          <div class="profile__about">
-            <div class="profile__details">
-              <h1 class="profile__name"></h1>
-
-              <button
-                type="button"
-                class="profile__button-edit"
-                aria-label="Edit profile"
-              >
-                <img
-                  src="<%=require('./images/edit_button.svg')%>"
-                  alt="edit button, pencil in a square"
-                />
-              </button>
-            </div>
-
-            <p class="profile__profession"></p>
+              aria-label="edit"
+            ></button>
+            <p class="profile__description">Explorer</p>
           </div>
-
           <button
+            class="profile__add-button"
             type="button"
-            class="profile__button-add"
-            aria-label="add new destination"
-          >
-            <img
-              src="<%=require('./images/plus_sign.svg')%>"
-              alt="an add button, plus sign"
-            />
-          </button>
+            aria-label="add"
+          ></button>
         </section>
-
-        <section class="destinations"></section>
+        <section class="cards">
+          <ul class="cards__list"></ul>
+        </section>
       </main>
-
-      <footer class="footer">
-        <p class="footer__copy">&copy; Around the U.S.</p>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
-    <!-- Card Template Start-->
+    <!-- Edit Modal -->
+    <div class="modal" id="profile-edit-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
+        <h3 class="modal__heading">Edit Profile</h3>
+        <form class="modal__form">
+          <label class="modal__label">
+            <input
+              class="modal__input"
+              type="text"
+              name="title"
+              placeholder="Name"
+              id="profile-title-input"
+              minlength="2"
+              maxlength="40"
+              required
+            />
+            <span class="modal__error" id="profile-title-input-error"
+              >The "Name" field must contain between 2 and 40 characters.</span
+            >
+          </label>
+          <label class="modal__label">
+            <input
+              class="modal__input"
+              type="text"
+              name="description"
+              placeholder="Description"
+              id="profile-decription-input"
+              minlength="2"
+              maxlength="200"
+              required
+            />
+            <span class="modal__error" id="profile-decription-input-error"
+              >The "About" field must contain between 2 and 200
+              characters.</span
+            >
+          </label>
+          <button class="modal__button" type="submit" aria-label="save">
+            Save
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Add Card Modal -->
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button class="modal__close" type="button"></button>
+        <h3 class="modal__heading">New Place</h3>
+        <form class="modal__form" id="add-card-form">
+          <label class="modal__label">
+            <input
+              class="modal__input modal__input_type_title"
+              type="text"
+              name="title"
+              placeholder="Title"
+              id="place-title-input"
+              minlength="1"
+              maxlength="30"
+              required
+            />
+            <span class="modal__error" id="place-title-input-error"
+              >The "Title" field must contain between 1 and 30 characters.</span
+            >
+          </label>
+          <label class="modal__label">
+            <input
+              class="modal__input modal__input_type_url"
+              type="url"
+              name="url"
+              placeholder="Image URL"
+              id="place-url-input"
+              required
+            />
+            <span class="modal__error" id="place-url-input-error"
+              >The "Image URL" field must contain a URL.</span
+            >
+          </label>
+          <button class="modal__button" type="submit" aria-label="save">
+            Create
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Image Popup Modal -->
+    <div class="modal" id="image-popup">
+      <div class="modal__container modal__container_type_image">
+        <button class="modal__close" type="button"></button>
+        <h3 class="modal__caption"></h3>
+        <img class="modal__image" src=" " alt="" />
+      </div>
+    </div>
 
     <template id="card-template">
-      <article class="card">
+      <li class="card">
+        <img src="" class="card__image" alt="" />
         <button
+          class="card__delete-button"
           type="button"
-          class="card__button-del"
-          aria-label="delete button"
-        >
-          <img
-            src="<%=require('./images/del_button.svg')%>"
-            alt="a trash can"
-          />
-        </button>
-        <button type="button" class="card__image-display" id="image-display">
-          <img src="&nbsp;" class="card__image-card" alt="" />
-        </button>
-        <div class="card__details">
+          aria-label="delete"
+        ></button>
+        <div class="card__description">
           <h2 class="card__title"></h2>
-          <div class="card__button">
-            <button
-              type="button"
-              class="card__button-like"
-              aria-label="like button"
-            ></button>
-            <span class="card__button-count"></span>
-          </div>
+          <button
+            class="card__like-button"
+            type="button"
+            aria-label="like"
+          ></button>
         </div>
-      </article>
+      </li>
     </template>
   </body>
 </html>
