--- a/src/index.html
+++ b/src/index.html
@@ -2,43 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta content="width-device-width, initial-scale=1.0" name="viewport" />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <title>Around the U.S.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Around the US" />
+    <meta name="author" content="Carlos Chavez" />
+    <meta name="keywords" content="us, parks, nationalparks" />
+    <title>Around the U.S</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body class="page">
     <div class="page__content">
-      <header class="header page__section">
+      <header class="header">
         <img
-          class="header__logo"
-          src="<%=require('./images/Logo.svg')%>"
+          class="header__image"
+          src="<%=require("./images/logo.svg")%>"
           alt="Around the U.S. Logo"
         />
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="<%=require('./images/jacques-cousteau.jpg')%>"
-            alt="Avatar"
-            class="profile__image"
-          />
-          <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
-            <button
-              class="profile__edit-button"
-              id="profile-edit-button"
-              type="button"
-              aria-label="edit"
-            ></button>
-            <p class="profile__description">Explorer</p>
+          <div class="profile__avatar">
+            <button class="profile__avatar-button" id="avatar-button" type="button"></button>
+            <img
+              class="profile__image"
+              src=""
+              alt="Avatar"
+            />
+            <!-- src="<%=require("./images/jacques-cousteau.png")%>" -->
           </div>
-          <button
-            class="profile__add-button"
-            type="button"
-            aria-label="add"
-          ></button>
+          <div class="profile__info">
+            <h1 class="profile__title"></h1>
+            <!-- <h1 class="profile__title">Jacques Cousteau</h1> -->
+            <button class="profile__edit-button" type="button"></button>
+            <p class="profile__description"></p>
+            <!-- <p class="profile__description">Explorer</p> -->
+          </div>
+          <button class="profile__add-button" type="button"></button>
         </section>
-        <section class="cards">
+        <section class="cards page__section">
           <ul class="cards__list"></ul>
         </section>
       </main>
@@ -46,119 +46,131 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
-    <!-- Edit Modal -->
-    <div class="modal" id="profile-edit-modal">
-      <div class="modal__container">
-        <button
-          class="modal__close"
-          id="modal-close-button"
-          type="button"
-        ></button>
-        <h3 class="modal__heading">Edit Profile</h3>
-        <form class="modal__form">
-          <label class="modal__label">
-            <input
-              class="modal__input"
-              type="text"
-              name="title"
-              placeholder="Name"
-              id="profile-title-input"
-              minlength="2"
-              maxlength="40"
-              required
-            />
-            <span class="modal__error" id="profile-title-input-error"
-              >The "Name" field must contain between 2 and 40 characters.</span
-            >
-          </label>
-          <label class="modal__label">
-            <input
-              class="modal__input"
-              type="text"
-              name="description"
-              placeholder="Description"
-              id="profile-decription-input"
-              minlength="2"
-              maxlength="200"
-              required
-            />
-            <span class="modal__error" id="profile-decription-input-error"
-              >The "About" field must contain between 2 and 200
-              characters.</span
-            >
-          </label>
-          <button class="modal__button" type="submit" aria-label="save">
-            Save
-          </button>
+
+    <!-- EDIT AVATAR IMAGE -->
+    <div class="modal" id="edit-avatar-modal">
+      <div class="modal__container modal__container_avatar">
+        <button class="modal__close-button" type="button" ></button>
+        <form class="modal__form" name="avatar-form" id="avatar-form" novalidate>
+          <p class="modal__heading">Change profile picture</p>
+          <input
+            name="avatar"
+            placeholder="Image Link"
+            id="avatar-link"
+            type="url"
+            class="modal__form-input modal__form-input_type_avatar"
+            required
+          />
+          <span class="modal__error" id="avatar-link-error"></span>
+          <button class="modal__button" type="submit" >Save</button>
         </form>
       </div>
     </div>
 
-    <!-- Add Card Modal -->
+    <!-- EDIT PROFILE MODAL -->
+    <div class="modal" id="edit-profile-modal">
+      <div class="modal__container">
+        <button class="modal__close" type="button"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form name="profile-form" class="modal__form" novalidate>
+          <label class="modal__label">
+            <input
+            class="modal__form-input"
+              type="text"
+              name="name"
+              placeholder="Name"
+              id="profile-title-input"
+              required
+              minlength="2"
+              maxlength="40"
+            />
+            <span class="modal__error" id="profile-title-input-error"></span>
+            </label>
+            <label class="modal__label">
+            <input
+            class="modal__form-input"
+              type="text"
+              name="job"
+              placeholder="Description"
+              id="profile-description-input"
+              required
+              minlength="2"
+              maxlength="200"
+            />
+            <span class="modal__error" id="profile-description-input-error"></span>
+            </label>
+          <button class="modal__button modal__button_disabled" type="submit" disabled>Save</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- ADD CARD MODAL -->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
         <button class="modal__close" type="button"></button>
-        <h3 class="modal__heading">New Place</h3>
-        <form class="modal__form" id="add-card-form">
+        <p class="modal__heading">New place</p>
+        <form name="card-form" class="modal__form">
           <label class="modal__label">
-            <input
-              class="modal__input modal__input_type_title"
-              type="text"
-              name="title"
-              placeholder="Title"
-              id="place-title-input"
-              minlength="1"
-              maxlength="30"
-              required
-            />
-            <span class="modal__error" id="place-title-input-error"
-              >The "Title" field must contain between 1 and 30 characters.</span
-            >
-          </label>
-          <label class="modal__label">
-            <input
-              class="modal__input modal__input_type_url"
-              type="url"
-              name="url"
-              placeholder="Image URL"
-              id="place-url-input"
-              required
-            />
-            <span class="modal__error" id="place-url-input-error"
-              >The "Image URL" field must contain a URL.</span
-            >
-          </label>
-          <button class="modal__button" type="submit" aria-label="save">
-            Create
-          </button>
+						<input
+							class="modal__form-input"
+							type="text"
+							name="name"
+							placeholder="Title"
+							id="card-title-input"
+							required
+							minlength="1"
+							maxlength="30"
+						/>
+						<span class="modal__error" id="card-title-input-error"></span>
+						</label>
+						<label class="modal__label">
+						<input
+							class="modal__form-input"
+							type="url"
+							name="link"
+							placeholder="Image link"
+							id="card-image-input"
+							required
+						/>
+						<span class="modal__error" id="card-image-input-error"></span>
+						</label>
+          <button class="modal__button modal__button_disabled" type="submit" disabled>Create</button>
         </form>
       </div>
     </div>
 
-    <!-- Image Popup Modal -->
-    <div class="modal" id="image-popup">
-      <div class="modal__container modal__container_type_image">
-        <button class="modal__close" type="button"></button>
-        <h3 class="modal__caption"></h3>
-        <img class="modal__image" src=" " alt="" />
+    <!-- PREVIEW MODAL -->
+    <div class="modal" id="preview-card-modal">
+      <div class="modal__container-preview">
+        <div class="modal__preview">
+          <button
+            class="modal__close modal__close_preview"
+            type="button"
+          ></button>
+          <img src="./images/lago.jpg" alt="#" class="modal__image" />
+          <p class="modal__caption"></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- CONFIRM DELETE MODAL -->
+    <div class="modal" id="delete-modal">
+      <div class="modal__container modal__container_confirm">
+        <button class="modal__close"></button>
+        <form class="modal__form">
+          <p class="modal__heading">Are you sure?</p>
+          <button class="modal__button" type="submit">Yes</button>
+        </form>
       </div>
     </div>
 
     <template id="card-template">
       <li class="card">
-        <img src="" class="card__image" alt="" />
-        <button
-          class="card__delete-button"
-          type="button"
-          aria-label="delete"
-        ></button>
+        <img src="#" alt="#" class="card__image" />
+        <button class="card__trashButton" type="button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button
-            class="card__like-button"
-            type="button"
-            aria-label="like"
-          ></button>
+          <button class="card__like-button" type="button"></button>
         </div>
       </li>
     </template>
